<resources>
    <string name="app_name">About Infamous</string>
    <string name="rom_control">About Infamous</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="category_general">General</string>
    <string name="category_statusbar">Statusbar</string>
    <string name="category_about_aokp">About</string>
    <string name="category_hardware_keys">Hardware Keys</string>
    <string name="category_lockscreen">Lockscreen</string>
    <string name="category_installer">Installer</string>
    <string name="category_toggles">Toggles</string>
    <string name="category_navring">Navigation Ring</string>
    <string name="category_navbar">Navigation bar</string>
    <string name="menu_show_drawer_icon">Show in app drawer</string>
    <string name="devs">The Crew</string>
    <string name="aokp">IOAP</string>
    <string name="aokp_website_title">Infamous Development</string>
    <string name="aokp_website_summary">Where we call home.</string>
    <string name="aokp_review_title">Downloads</string>
    <string name="aokp_review_summary">Androidfilehost.com official server of Infamous</string>
    <string name="aokp_irc_title">Github.com/IOAP</string>
    <string name="aokp_irc_summary">Our public repo. Check it for latest changes.</string>
    <string name="about_aokp">About Infamous</string>
    <string name="about_aokp_summary">@null</string>
    <string name="donate_iokp">http://goo.gl/V01Vqx</string>
    <string name="github_iokp">https://github.com/IOAP</string>
    <string name="github_midnightRider67">https://github.com/MidnightRider67</string>
    <string name="github_djmatt604">https://github.com/djmatt604</string>
    <string name="github_octane70">https://github.com/Octane70</string>
    <string name="github_mgbotoe">https://github.com/mgbotoe</string>
    <string name="github_jamison904">https://github.com/jamison904</string>
    <string name="github_mrimp">https://github.com/mrimp</string>
    <string name="github_nolinuxnoparty">https://github.com/nolinuxnoparty</string>
    <string name="url_aokp">http://www.infamousdevelopment.com</string>
    <string name="url_aokp_gerrit">http://goo.gl/AH7Uxf</string>
    <string name="url_aokp_irc">https://github.com/IOKP-kitkat</string>
    <string name="android_open_kang_project">Links to our stuff</string>
    <string name="kanglings">The Infamous</string>
    <string name="mgerrit_changelog_title">Infamous Development G+</string>
    <string name="mgerrit_changelog_summary">Our public Google plus page. Check it for latest changes.</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">Holo</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">When enabled, this option will allow you to change the brightness by
        sliding your finger across the Statusbar. Note: Will not be active when auto-brightness is on
    </string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charger</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if a charger is plugged in or unplugged</string>
    <string name="category_advanced">Advanced</string>
    <string name="title_hardware_keys_volume_keys_double_tap">Volume Smash Rotation</string>
    <string name="summary_hardware_keys_volume_keys_double_tap">Whether double tapping the volume keys will lock and unlock the auto-rotate setting</string>
    <string name="title_hardware_keys_home_long_press">Home - long press</string>
    <string name="title_hardware_keys_home_double_tap">Home - double tap</string>
    <string name="title_hardware_keys_menu">Menu</string>
    <string name="title_hardware_keys_menu_long_press">Menu - long press</string>
    <string name="title_hardware_keys_search">Search</string>
    <string name="title_hardware_keys_search_long_press">Search - long press</string>
    <string name="title_hardware_keys_switch_app">Recents</string>
    <string name="title_hardware_keys_switch_app_long_press">Recents - long press</string>
    <string name="title_hardware_keys_camera">Camera</string>
    <string name="title_setting_enable_custom_hardware_keys">Customize hardware keys</string>
    <string name="category_statusbar_notification">Notifications</string>
    <string name="category_statusbar_battery">Battery</string>
    <string name="category_statusbar_clock">Clock</string>
    <string name="adb_notify">USB debugging notify</string>
    <string name="adb_notify_summary">Display a notification when USB debugging is connected</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In Statusbar while typing</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications</string>
    <string name="notification_count_title">Show notification count</string>
    <string name="notification_count_summary">Display number of pending notifications in the Statusbar</string>
    <string name="battery_percentage_indicator_title">Show battery % indicator</string>
    <string name="battery_percentage_indicator_summary">Show battery percentage indicator front of battery icon</string>
    <string name="hide_battery_icon_title">Hide battery icon</string>
    <string name="hide_battery_icon_summary">Completly hide battery icon from statusbar</string>
    <string name="statusbar_clock_am_pm_style_title">AM/PM style</string>
    <string name="statusbar_clock_style_title">Clock style</string>
    <string name="statusbar_clock_weekday_title">Day of the week</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="no_clock">No clock</string>
    <string name="dont_show">Don\'t show</string>
    <string name="small_am_pm">Small AM/PM</string>
    <string name="regular_am_pm">Regular AM/PM</string>
    <string name="small_weekday">Small weekday</string>
    <string name="regular_weekday">Regular weekday</string>
    <string name="statusbar_hide_signal_bars_title">Hide Signal Bars</string>
    <string name="statusbar_hide_signal_bars_summary">Ability to hide the signal bars</string>
    <string name="category_signalbars">Signal Bars</string>
    <string name="statusbar_signal_text_title">Show signal text</string>
    <string name="statusbar_signal_text_summary">Show signal with dBm</string>
    <string name="persist_options">Persistence</string>
    <string name="persist_enable">Enable Persistence</string>
    <string name="persist_enable_summary">Enable data to persist across installs</string>
    <string name="persist_prop_density">Persist Density</string>
    <string name="persist_prop_density_summary">Persist LCD density</string>
    <string name="persist_file_hosts">Persist Hosts</string>
    <string name="persist_file_hosts_summary">Persist hosts file</string>
    <string name="persist_file_xposed">Persist Xposed</string>
    <string name="persist_file_xposed_summary">Persist file app_process for Xposed framework</string>
    <string name="title_toggles">Toggles</string>
    <string name="toggles_style_tile">Tiles</string>
    <string name="toggles_style_traditional">Traditional pulldown</string>
    <string name="toggles_style_scrollable">Traditional Scrollable</string>
    <string name="toggles_display_close">Close</string>
    <string name="toggles_order_title">Toggle order</string>
    <string name="toggles_order_summary">Choose the order in which your toggles are displayed</string>
    <string name="toggle_dialog_arrange_title">Toggle setup</string>
    <string name="toggle_dialog_add_toggles">Add a toggle</string>
    <string name="toggle_swap_handle_side">Drag handle on right</string>
    <string name="toggles_style_title">Toggle style</string>
    <string name="toggles_per_row_title">Toggles per row</string>
    <string name="toggles_per_row_three">3</string>
    <string name="toggles_per_row_four">4</string>
    <string name="toggles_per_row_five">5</string>
    <string name="add_toggles">Add toggle</string>
    <string name="toggles_enable_fasttoggle_title">Enable fast toggle</string>
    <string name="toggles_enable_fasttoggle_summary">Overrides default behavior</string>
    <string name="toggles_choose_fasttoggle_side_title">Choose fast toggle side</string>
    <string name="toggles_choose_fasttoggle_side_summary">Select the side that triggers the fast toggle</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="toggles_swipe_to_switch_title">Swipe to switch</string>
    <string name="toggles_swipe_to_switch_summary">Swipe to switch between notifications and Quick Settings</string>
    <string name="toggle_tab_arrange">Toggle Setup</string>
    <string name="toggles_tab_settings">Configure</string>
    <string name="toggles_arrange_instructions">Rearrange by dragging by the handle on the right. Remove by swiping.</string>
    <string name="toggles_collapse_generic_title">Collapse shade on toggle click</string>
    <string name="toggles_collapse_generic_summary">Close shade on all generic toggle actions</string>
    <string name="toggles_vibrate_title">Vibrate on toggle click</string>
    <string name="toggles_vibrate_summary">Vibrate on all generic toggle actions</string>
    <string name="toggle_favcontact_title">Favorite contact</string>
    <string name="toggle_favcontact_summary">Choose your favorite contact</string>
    <string name="navbar_ring_cat">Navigation Ring Targets</string>
    <string name="navbar_ring">Custom Ring Targets</string>
    <string name="navring_enable_long">Enable Longpress for Navigation Ring</string>
    <string name="navring_target_save">Navigation Rings saved</string>
    <string name="navring_target_reset_message">Do you want to reset the Navigation Ring?</string>
    <string name="navring_target_reset">Navigation Ring targets reset.</string>
    <string name="choose_action_title">Choose action</string>
    <string name="choose_action_short_title">Choose short action</string>
    <string name="choose_action_long_title">Choose long action</string>
    <string name="action_long_save">set as long action</string>
    <string name="title_navring_amount">Number of Navigation Ring targets</string>
    <string name="summary_navring_amount">Choose number of targets in the Navigation Ring</string>
    <string name="interface_navring_settings_title">Navigation Ring</string>
    <string name="interface_navring_settings_summary">@null</string>
    <string name="navring_target_info">Drag your finger to targets to assign actions</string>
    <string name="navring_clear">Clear action</string>
    <string name="action_short">Short action</string>
    <string name="action_long">Long action</string>
    <string name="action_double">Double tap action</string>
    <string name="action_icon">Custom icon</string>
    <string name="navring_target_amount_text">Current number of targets</string>
</resources>