<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:aokp="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

    <LinearLayout
            style="@style/settingsFragmentStyle">

        <com.aokp.romcontrol.widgets.DeveloperPreference
                aokp:nameDev="Minions"
                aokp:twitterHandle="Mgbotoe"
                aokp:githubLink="@string/github_iokp"
                aokp:donateLink="@string/donate_iokp"
                aokp:emailDev="mgbotoe@gmail.com"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <com.aokp.romcontrol.settings.UrlSetting
                android:id="@+id/aokp"
                android:title="@string/aokp_website_title"
                android:summary="@string/aokp_website_summary"
                aokp:url="@string/url_aokp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <com.aokp.romcontrol.settings.UrlSetting
                android:id="@+id/aokp_review"
                android:title="@string/aokp_review_title"
                android:summary="@string/aokp_review_summary"
                aokp:url="@string/url_aokp_gerrit"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <com.aokp.romcontrol.settings.UrlSetting
                android:id="@+id/aokp_mgerrit_changelog"
                android:title="@string/mgerrit_changelog_title"
                android:summary="@string/mgerrit_changelog_summary"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

    </LinearLayout>
</ScrollView>
