<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:aokp="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

    <LinearLayout
            style="@style/settingsFragmentStyle">

        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="Jamison904"
                aokp:nameDev="jamison904"
                aokp:twitterHandle="Jamison904"
                aokp:githubLink="@string/github_jamison904"
                aokp:emailDev="james.jamison85@gmail.com"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="mrimp"
                aokp:nameDev="mrimp"
                aokp:twitterHandle="mrimp"
                aokp:githubLink="@string/github_mrimp"
                aokp:emailDev="mrimp@day-off.net"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="mgbotoe"
                aokp:nameDev="mgbotoe"
                aokp:twitterHandle="mgbotoe"
                aokp:githubLink="@string/github_mgbotoe"
                aokp:emailDev="mgbotoe@gmail.com"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="Octane70"
                aokp:nameDev="Octane70"
                aokp:twitterHandle="IOKP_ROM"
                aokp:githubLink="@string/github_octane70"
                aokp:emailDev="robczepil@gmail.com"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="Mdjmatt604"
                aokp:nameDev="djmatt604"
                aokp:twitterHandle="MattBylander"
                aokp:githubLink="@string/github_djmatt604"
                aokp:emailDev="djmatt604@gmail.com"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.aokp.romcontrol.widgets.DeveloperPreference
                android:title="MidnightRider67"
                aokp:nameDev="MidnightRider67"
                aokp:twitterHandle="jerrymarshall67"
                aokp:githubLink="@string/github_midnightRider67"
                aokp:emailDev="jerrymarshall67@gmail.com"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        
    </LinearLayout>
</ScrollView>
